infra/k8s/expiration-redis.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: expiration-redis-statefulset
spec:
  serviceName: expiration-redis-service
  replicas: 1
  selector:
    matchLabels:
      app: expiration-redis
  template:
    metadata:
      labels:
        app: expiration-redis
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: expiration-redis
        image: redis
        ports:
        - containerPort: 6379
        volumeMounts:
        - name: expiration-redis-persistent-storage
          mountPath: /home/ubuntu/expiration-redis
  volumeClaimTemplates:
  - metadata:
      name: expiration-redis-persistent-storage
      annotations:
        volume.beta.kubernetes.io/storage-class: "gp2"
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: expiration-redis-service
spec:
  selector:
    app: expiration-redis
  ports:
  - name: db
    protocol: TCP
    port: 6379
    targetPort: 6379
