infra/k8s/products-mongo.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: products-mongo-statefulset
spec:
  serviceName: products-mongo-service
  replicas: 2
  selector:
    matchLabels:
      app: products-mongo
  template:
    metadata:
      labels:
        app: products-mongo
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: products-mongo
          image: mongo
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: products-mongo-persistent-storage
              mountPath: /home/ubuntu/products-mongo
  volumeClaimTemplates:
  - metadata:
      name: products-mongo-persistent-storage
      annotations:
        volume.beta.kubernetes.io/storage-class: "hostpath"
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: products-mongo-service
spec:
  selector:
    app: products-mongo
  ports:
  - name: db
    protocol: TCP
    port: 27017
    targetPort: 27017
